<resources>
    <string name="app_name">convertor</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hexdecimal">Hexdecimal</string>
    <string name="octal">Octal</string>
    <string name="decimal">Decimal</string>
    <string name="binary">Binary</string>
    <string name="hint">Number &#8230;</string>
    <string name="numbericon">numberIcon</string>
    <string name="current_system">current System</string>
    <string name="number">Number</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="boring">Boring</string>
</resources>