<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".normalFragment">

    <TextView
        android:id="@+id/binaryText4"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/binaryText3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/hexdecimal" />

    <TextView
        android:id="@+id/binaryText3"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/binaryText2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="30dp"
        android:text="@string/octal" />

    <TextView
        android:id="@+id/binaryText2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/binaryText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="41dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="42dp"
        android:text="@string/decimal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="98dp"
        android:text="@string/current_system"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="42dp"
        android:text="@string/number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/number"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/binary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/binary"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/decimal"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/octal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/octal"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/hexdecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hexdecimal"
            android:textSize="14sp" />

    </RadioGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_below="@+id/group"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="63dp"
        android:background="@color/selectedColor" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="37dp"
        android:text="@string/binary" />

    <TextView
        android:id="@+id/binaryText"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="269dp" />

</RelativeLayout>