<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround_dark"
    tools:context=".darkFragment">


    <LinearLayout
        android:id="@+id/boxNumber"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/search"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/numbericon"
            app:srcCompat="@drawable/icons8_hashtag_100" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/hjjhh"
            android:hint="@string/hint"
            android:inputType="textShortMessage|textPersonName"
            android:textColor="@color/fontColor_dark"
            android:textColorHint="@color/bottomColor"
            android:textSize="19sp"
            android:importantForAutofill="no" />
    </LinearLayout>

<!--    <RelativeLayout-->
<!--        android:id="@+id/radioGroup"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/boxNumber"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:gravity="center">-->

<!--    </RelativeLayout>-->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxNumber"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:buttonTint="@color/selectedColor"
            android:checked="true"
            android:text="@string/binary"
            android:textColor="@color/fontColor_dark"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:buttonTint="@color/selectedColor"
            android:text="@string/decimal"
            android:textColor="@color/fontColor_dark"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:buttonTint="@color/selectedColor"
            android:text="@string/octal"
            android:textColor="@color/fontColor_dark"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:buttonTint="@color/selectedColor"
            android:text="@string/hexdecimal"
            android:textColor="@color/fontColor_dark"
            android:textSize="13sp" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp">

        <LinearLayout
            android:id="@+id/binary"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/shape_binary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="29dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="165dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/binary"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/binaryText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left|center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/decimal"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:layout_below="@+id/binary"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/shape_decimal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="29dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="165dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/decimal"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/decimalText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left|center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/octal"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:layout_below="@+id/decimal"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/shape_ocral"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="29dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="165dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/octal"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/octalText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left|center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hexdecimal"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:layout_below="@+id/octal"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/shape_hexdecimal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingTop="5dp"
            android:paddingEnd="29dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="165dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/hexdecimal"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hexdecimalText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left|center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>